# anythink_ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  RAG_plan.md  README.md  anythink_app_description.md  anythink_enhanced_web_search.md  anythink_glyph_rendering_fix.md  anythink_logo_alignment_fix.md  anythink_mmae_description.md  anythink_mmwe_description.md  anythink_v2.1_ui_ux_description.md  anythink_v2.2_visual_identity_description.md  anythink_v2_description.md  anythink_v3.2.0_debug_description.md  anythink_v3.3.0_theme_expansion.md  anythink_v3_functionality_description.md  anythink_v4_multi_model_optimization.md  anythink_windows_mcp_description.md  coverage.json  mmae_plan.md  mmwe_plan.md  pyproject.toml  text  ultraplan_anythink_ai.md  web_search_plan.md  what.txt
.github/workflows/: ci.yml  publish.yml
docs/: browse_module.md  compare_module.md  debug_module.md  export_module.md  mcp_module.md  optimize_module.md  plugins_module.md  providers_module.md  rag_module.md  schedule_module.md  search_module.md  workflow_module.md
src/: windows_mcp_plan.md
src/anythink/: __init__.py  cli.py  diagnostics.py  exceptions.py  updater.py
src/anythink/app/: __init__.py  chat.py  context.py
src/anythink/batch/: BATCH_MODULE.md  __init__.py  runner.py  writers.py
src/anythink/bookmarks/: __init__.py  manager.py  models.py
src/anythink/branch/: __init__.py  manager.py  models.py
src/anythink/browse/: __init__.py  fetch.py
src/anythink/commands/: __init__.py  base.py  handlers.py  registry.py
src/anythink/compare/: __init__.py  runner.py
src/anythink/config/: __init__.py  backup.py  manager.py  models.py  personas.py  schema.py  templates.py  validator.py
src/anythink/data/: __init__.py  model_registry.json
src/anythink/debug/: __init__.py  commands.py  formatters.py  http_logger.py  manager.py  models.py
src/anythink/embeddings/: EMBEDDINGS_MODULE.md  __init__.py  base.py  cohere_emb.py  google_emb.py  local.py  mock.py  ollama.py  openai_emb.py  registry.py
src/anythink/export/: __init__.py  formats.py
src/anythink/files/: __init__.py  reader.py
src/anythink/keys/: manager.py
src/anythink/mcp/: __init__.py  client.py  manager.py  models.py  server.py
src/anythink/notify/: __init__.py  backends.py  notifier.py
src/anythink/optimize/: __init__.py  attribution.py  classifier.py  commands.py  context_engine.py  mixing.py  plan.py  (+8 more)
tests/: conftest.py  test_cli.py  test_config_validator.py  test_debug_commands.py  test_debug_formatters.py  test_debug_http_logger.py  test_debug_manager.py  test_debug_models.py  test_diagnostics.py  test_exceptions.py  test_hardening.py  test_init.py  test_updater.py  test_workflow_commands.py  test_workflow_engine.py  test_workflow_log.py  test_workflow_manifest.py  test_workflow_models.py  test_workflow_optimizer.py  test_workflow_panel.py  test_workflow_planner.py  test_workflow_registry.py  test_workflow_router.py  test_workflow_stages.py  test_workflow_storage.py
tests/test_app/: test_chat.py  test_context.py
tests/test_batch/: test_runner.py
tests/test_bookmarks/: test_manager.py
tests/test_branch/: test_manager.py
tests/test_browse/: test_fetch.py
tests/test_commands/: test_base.py  test_handlers.py  test_registry.py
tests/test_compare/: test_runner.py
tests/test_config/: test_backup.py  test_manager.py  test_models.py  test_personas.py  test_templates.py
tests/test_e2e/: test_cli_v3.py  test_spend_integration.py  test_v3_commands.py
tests/test_embeddings/: test_cohere_emb.py  test_google_emb.py  test_local_extended.py  test_ollama.py  test_openai_emb.py
tests/test_export/: test_formats.py
tests/test_files/: test_reader.py
tests/test_keys/: test_manager.py
tests/test_mcp/: test_builtin.py  test_client.py  test_manager.py  test_mcp_handler.py  test_models.py  test_server.py  test_windows_apps.py  test_windows_clipboard.py  test_windows_explorer.py  test_windows_filesystem.py  test_windows_handler.py  test_windows_infra.py  test_windows_integration.py  test_windows_notification.py  test_windows_process.py  test_windows_screenshot.py  test_windows_settings.py  test_windows_system.py  test_windows_window.py
tests/test_notify/: test_backends.py  test_notifier.py  test_notify_handler.py
tests/test_optimize/: test_attribution.py  test_classifier.py  test_commands.py  test_context_engine.py  test_mixing.py  test_models.py  test_plan.py  test_plan_engine.py  test_plan_runner.py  test_rate_limit.py  test_registry.py  test_router.py  test_settings_manager.py
tests/test_plugins/: test_manager.py  test_models.py
tests/test_providers/: conftest.py  test_anthropic.py  test_base.py  test_gen_params.py  test_groq.py  test_ollama.py  test_openai.py  test_providers_no_sdk.py  test_registry.py
tests/test_rag/: test_backends.py  test_bm25.py  test_chunkers.py  test_commands.py  test_incremental.py  test_ingestion.py  test_manager.py  test_nomatch.py  test_parsers.py  test_quality.py  test_rag_chunk_models.py  test_rag_settings.py  test_reranker.py  test_retrieval.py  test_store.py  test_threshold.py  test_wizard.py
tests/test_schedule/: test_manager.py  test_runner.py
tests/test_search/: test_base.py  test_bing.py  test_cache.py  test_duckduckgo.py  test_exa.py  test_google_cse.py  test_newsapi.py  test_orchestrator.py  test_registry.py  test_rewriter.py  test_serpapi.py
tests/test_session/: test_locking.py  test_manager.py  test_models.py
tests/test_smart/: __init__.py  test_categories.py  test_combiner.py  test_commands.py  test_detector.py  test_engine.py  test_executor.py  test_formatter.py  test_models.py  test_quality.py  test_registry.py  test_router.py  test_store.py
tests/test_spend/: test_tracker.py
tests/test_tools/: test_base.py  test_exec.py  test_runner.py
tests/test_ui/: test_banner.py  test_bubbles.py  test_console.py  test_dashboard.py  test_hud.py  test_length.py  test_renderer.py  test_startup.py  test_status.py  test_textual_app.py  test_theme.py  test_timestamp.py  test_tui_workflow.py
tests/test_voice/: test_recorder.py  test_transcriber.py
(+155 files in other folders)
