[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anythink"
version = "3.1.1"
description = "A universal AI terminal workstation: multi-provider LLM chat, RAG, agentic tools, MCP, voice, 4-panel dashboard, spend tracking, batch processing, scheduling, and a plugin architecture."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "dhineshtheprogrammer", email = "dhineshpro33@gmail.com" }]
requires-python = ">=3.11"
keywords = ["ai", "cli", "chatbot", "llm", "terminal", "groq", "gemini", "openai", "anthropic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "textual>=0.60",
    "prompt_toolkit>=3.0",
    "keyring>=25.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "filelock>=3.13",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
groq = ["groq>=0.9"]
gemini = ["google-generativeai>=0.7"]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
mistral = ["mistralai>=1.0"]
cohere = ["cohere>=5.0"]
search = ["duckduckgo-search>=6.0"]
exa = ["exa-py>=1.0"]
newsapi = ["httpx>=0.27"]
bing = ["httpx>=0.27"]
google-cse = ["httpx>=0.27"]
# --- V2 capability extras (heavy deps, lazy-imported) ---
rag = [
    "sentence-transformers>=2.7",
    "pypdf>=4.0",
    "python-docx>=1.1",
]
rag-ocr = ["pytesseract>=0.3", "Pillow>=10.0"]
# --- Phase 5: vector store backends ---
rag-faiss = ["faiss-cpu>=1.8"]
rag-chroma = ["chromadb>=0.5"]
rag-lance = ["lancedb>=0.6"]
rag-pinecone = ["pinecone-client>=3.0"]
rag-azure = ["azure-search-documents>=11.4"]
# --- Phase 8: embedding backend extras (httpx is already a core dep) ---
emb-openai = ["httpx>=0.27"]
emb-cohere = ["httpx>=0.27"]
emb-google = ["httpx>=0.27"]
voice = ["openai-whisper>=20231117", "sounddevice>=0.4"]
browser = ["playwright>=1.44"]
mcp = ["mcp>=1.0"]
# --- V3 extras ---
pdf = ["fpdf2>=2.7"]
scheduler = ["croniter>=2.0"]
# --- Windows OS MCP integration ---
windows = [
    "pywin32>=306",
    "psutil>=5.9",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
    "winotify>=1.1.0",
    "win10toast>=0.9",
]
all = [
    "groq>=0.9",
    "google-generativeai>=0.7",
    "openai>=1.30",
    "anthropic>=0.28",
    "mistralai>=1.0",
    "cohere>=5.0",
    "duckduckgo-search>=6.0",
    "sentence-transformers>=2.7",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openai-whisper>=20231117",
    "sounddevice>=0.4",
    "playwright>=1.44",
    "mcp>=1.0",
    "fpdf2>=2.7",
    "croniter>=2.0",
    "pywin32>=306",
    "psutil>=5.9",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
    "winotify>=1.1.0",
    "win10toast>=0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
    "keyrings.alt>=5.0",
    "numpy>=1.24",        # voice tests import numpy directly (not via optional extra)
    "croniter>=2.0",
]

[project.scripts]
anythink = "anythink.cli:app"

[project.entry-points."anythink.providers"]
groq = "anythink.providers.groq:GroqProvider"
openai = "anythink.providers.openai:OpenAIProvider"
anthropic = "anythink.providers.anthropic:AnthropicProvider"
gemini = "anythink.providers.gemini:GeminiProvider"
mistral = "anythink.providers.mistral:MistralProvider"
cohere = "anythink.providers.cohere:CohereProvider"
ollama = "anythink.providers.ollama:OllamaProvider"
lm_studio = "anythink.providers.lm_studio:LMStudioProvider"

[project.entry-points."anythink.search_backends"]
duckduckgo = "anythink.search.duckduckgo:DuckDuckGoSearch"
serpapi = "anythink.search.serpapi:SerpAPISearch"
bing = "anythink.search.bing:BingSearch"
newsapi = "anythink.search.newsapi:NewsAPISearch"
exa = "anythink.search.exa:ExaSearch"
google_cse = "anythink.search.google_cse:GoogleCSESearch"

[project.entry-points."anythink.slash_commands"]
builtin = "anythink.commands.handlers:register_commands"

# --- V2 registry groups ---
[project.entry-points."anythink.embedding_backends"]
mock = "anythink.embeddings.mock:MockEmbeddingBackend"
local = "anythink.embeddings.local:LocalEmbeddingBackend"
ollama = "anythink.embeddings.ollama:OllamaEmbeddingBackend"
openai-emb = "anythink.embeddings.openai_emb:OpenAIEmbeddingBackend"
cohere-emb = "anythink.embeddings.cohere_emb:CohereEmbeddingBackend"
google-emb = "anythink.embeddings.google_emb:GoogleEmbeddingBackend"

[project.entry-points."anythink.vector_stores"]
pure = "anythink.rag.backends.pure:PureVectorStore"
faiss = "anythink.rag.backends.faiss_store:FAISSVectorStore"
chroma = "anythink.rag.backends.chroma_store:ChromaVectorStore"
lance = "anythink.rag.backends.lance_store:LanceVectorStore"
pinecone = "anythink.rag.backends.pinecone_store:PineconeVectorStore"
azure = "anythink.rag.backends.azure_store:AzureVectorStore"

[project.entry-points."anythink.tools"]
exec = "anythink.tools.exec:CodeExecTool"
# browse entry point omitted — BrowseTool requires BrowseFetcher at init

[project.entry-points."anythink.mcp_servers"]
filesystem = "anythink.mcp.builtin.filesystem:FilesystemServer"
sessions = "anythink.mcp.builtin.sessions:SessionsServer"
rag = "anythink.mcp.builtin.rag:RAGServer"
search = "anythink.mcp.builtin.search:SearchServer"
# Windows OS MCP servers (registered always; gated by sys.platform + windows_enabled at runtime)
windows_filesystem = "anythink.mcp.builtin.windows_filesystem:WindowsFilesystemServer"
windows_explorer = "anythink.mcp.builtin.windows_explorer:WindowsExplorerServer"
windows_apps = "anythink.mcp.builtin.windows_apps:WindowsAppsServer"
windows_window = "anythink.mcp.builtin.windows_window:WindowsWindowServer"
windows_process = "anythink.mcp.builtin.windows_process:WindowsProcessServer"
windows_system = "anythink.mcp.builtin.windows_system:WindowsSystemServer"
windows_settings = "anythink.mcp.builtin.windows_settings:WindowsSettingsServer"
windows_clipboard = "anythink.mcp.builtin.windows_clipboard:WindowsClipboardServer"
windows_screenshot = "anythink.mcp.builtin.windows_screenshot:WindowsScreenshotServer"
windows_notification = "anythink.mcp.builtin.windows_notification:WindowsNotificationServer"

# --- V4 MMOS plugin hook groups (empty — third parties register here) ---
[project.entry-points."anythink.pre_routing_hooks"]

[project.entry-points."anythink.post_phase_hooks"]

[project.urls]
Homepage = "https://github.com/dhineshtheprogrammer/anythink_ai"
Repository = "https://github.com/dhineshtheprogrammer/anythink_ai"
Issues = "https://github.com/dhineshtheprogrammer/anythink_ai/issues"
Changelog = "https://github.com/dhineshtheprogrammer/anythink_ai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/anythink"]

[tool.hatch.build.targets.wheel.force-include]
"src/anythink/data/model_registry.json" = "anythink/data/model_registry.json"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/anythink"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=anythink --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["anythink"]
omit = [
    "*/ui/input.py",             # prompt_toolkit integration, not unit-testable
    "*/ui/textual/app.py",       # Textual TUI shell — interactive paths tested via Pilot
    "*/ui/textual/panels/file_browser.py",  # Textual event handler, requires live DOM
    # V4 panels — TUI widgets requiring live DOM / interactive event loops
    "*/ui/textual/panels/optimize_panel.py",
    "*/ui/textual/panels/ratelimit_panel.py",
    "*/ui/textual/panels/plan_review_panel.py",
    "*/ui/textual/panels/phase_tracker.py",
    "*/ui/textual/microprompt.py",
    "*/ui/textual/override_caution_modal.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",          # abstract method stubs
]

[tool.bandit]
targets = ["src/anythink"]
skips = ["B101"]
